# compas-toolkit

./: .buildinfo  .clang-tidy  .documenter-siteinfo.json  .gitignore  .gitmodules  .zenodo.json  CMakeLists.txt  Makefile  Manifest.toml  Project.toml  README.md  api_cxx.html  example.html  genindex.html  index.html  install.html  objects.inv  search.html  searchindex.js
.github/workflows/: cmake-cuda-multi-compiler.yml  cmake-hip.yml  documentation.yml  zenodo-release.yml
CompasToolkit.jl/: Manifest.toml  Project.toml
CompasToolkit.jl/docs/: Manifest.toml  Project.toml  main.jl  make.jl
CompasToolkit.jl/docs/src/: api_julia.md  index.md
CompasToolkit.jl/examples/: Manifest.toml  Project.toml  common.jl  echos.jl  example.jl  fisp.jl  helloworld.jl  jacobian.jl  jacobian_hermitian.jl  jacobian_transposed.jl  pssfp.jl  residual.jl  signal.jl
CompasToolkit.jl/src/: CompasToolkit.input  CompasToolkit.jl  Constants.jl.input  Manifest.toml
CompasToolkit.jl/tests/: Manifest.toml  Project.toml  fisp.jl  fisp3d.jl  pssfp.jl
_sources/: api_cxx.rst.txt  example.rst.txt  index.rst.txt
_sources/api_cxx/: CartesianTrajectory.rst.txt  CartesianTrajectoryView.rst.txt  CudaContext.rst.txt  FISPSequence.rst.txt  SimulateSignalMethod.rst.txt  SpiralTrajectory.rst.txt  TissueParameterField.rst.txt  TissueParameters.rst.txt  Trajectory.rst.txt  compute_jacobian.rst.txt  compute_jacobian_hermitian.rst.txt  compute_residual.rst.txt  magnetization_to_signal.rst.txt  make_cartesian_trajectory.rst.txt  make_spiral_trajectory.rst.txt  pSSFPSequence.rst.txt  phase_encoding.rst.txt  prephaser.rst.txt  rewind.rst.txt  simulate_magnetization.rst.txt  simulate_magnetization_derivative.rst.txt
_static/: my-styles.css
api_cxx/: CartesianTrajectory.html  CartesianTrajectoryView.html  CudaContext.html  FISPSequence.html  SimulateSignalMethod.html  SpiralTrajectory.html  TissueParameterField.html  TissueParameters.html  Trajectory.html  compute_jacobian.html  compute_jacobian_hermitian.html  compute_residual.html  magnetization_to_signal.html  make_cartesian_trajectory.html  make_spiral_trajectory.html  pSSFPSequence.html  phase_encoding.html  prephaser.html  rewind.html  simulate_magnetization.html  simulate_magnetization_derivative.html
api_julia/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
benchmarks/: CMakeLists.txt  common.hpp  compute_gemm.cu  compute_jacobian.cpp  compute_jacobian_hermitian.cpp  simulate_sequence_fisp.cpp  simulate_signal.cpp
docs/: Doxyfile  Makefile  build_api.py  conf.py  index.rst  install.rst  requirements.txt
include/compas/core/: assertion.h  backends.h  complex_type.h  context.h  macros.h  object.h  utils.h  vector.h  view.h
include/compas/jacobian/: hermitian.h  product.h
include/compas/parameters/: tissue.h  tissue_view.cuh
include/compas/sequences/: fisp.h  fisp_view.h  pssfp.h  pssfp_view.h  simulate.h
include/compas/simulate/: derivative.h  fisp.h  pssfp.h
include/compas/trajectories/: cartesian.h  cartesian_view.cuh  phase_encoding.h  signal.h  spiral.h  spiral_view.cuh  trajectory.h
include/compas/utils/: gemm.h  residual.h
julia-bindings/: CMakeLists.txt
julia-bindings/src/: bindings.cpp  common.h  constants.h.input
kernel_tuner/: common.py  tune_hermitian.py  tune_jacobian.py  tune_signal.py
src/: context.cu  context.h  signal.cu  signal.h  signal_kernels.cuh  simulate_signal.cu  simulate_signal.h  tissueparameters.cpp  tissueparameters.h  trajectory.cpp  trajectory.h
src/core/: all.h  assertion.h  complex_type.h  context.cu  context.h  cuda_view.h  defines.h  macros.h  pair.h  utils.h  vector.h  view.h
src/jacobian/: hermitian.cu  hermitian_kernels.cuh  product.cpp  product.cu  product.h  product_kernels.cuh  regular.cu  transpose.cu
src/operators/: epg.cuh  isochromat.cuh
src/parameters/: tissue.cpp  tissue.h  tissue_view.cuh
src/sequences/: derivative.cu  fisp.cu  fisp.h  fisp3d.cu  fisp3d.h  fisp3d_kernels.cuh  fisp3d_view.h  fisp_kernels.cuh  fisp_view.h  pssfp.cu  pssfp.h  pssfp_kernels.cuh  pssfp_view.h  simulate.cu
src/simulate/: derivative.cu  derivative.h  derivative_kernels.cuh  fisp.cu  fisp_kernels.cuh  phase_encoding.cu  phase_encoding.h  phase_encoding_kernels.cuh  pssfp.cu  pssfp_kernels.cuh  residual.cu  residual.h  residual_kernels.cuh  sequence.cu  sequence.h  sequence_kernels.cuh  signal.cu  signal.h  signal_kernels.cuh
src/trajectories/: cartesian.cpp  cartesian.h  cartesian_kernels.cuh  cartesian_view.cuh  multi.h  phase_encoding.cu  phase_encoding_kernels.cuh  signal.cu  signal_kernels.cuh  spiral.cpp  spiral.h  spiral_kernels.cuh  spiral_view.cuh  trajectory.h
src/utils/: assertion.h  complex_type.h  cuda_view.h  gemm.cu  gemm_kernels.cuh  macros.h  residual.cu  residual_kernels.cuh  view.h
tests/: CMakeLists.txt  simulate_signal.cpp
